--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "neo4j>=6.0.3",
+    "pip>=25.3",
+    "spacy>=3.8.11",
+    "transformers>=4.57.1",
 ]
