--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "The Keyword & Entity based News Event Clustering framework"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "flair>=0.15.1",
     "neo4j>=6.0.3",
     "pip>=25.3",
     "spacy>=3.8.11",
     "transformers>=4.57.1",
+    "yake>=0.6.0",
 ]
