--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flair>=0.15.1",
-    "neo4j>=6.0.3",
+    "neo4j-rust-ext>=6.0.3.0",
     "pip>=25.3",
     "python-dotenv>=1.2.1",
     "spacy>=3.8.11",
