--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,12 @@ dependencies = [
     "transformers>=4.57.1",
     "yake>=0.6.0",
 ]
+
+[dependency-groups]
+linting = [
+    "ruff>=0.14.10",
+    "ty>=0.0.8",
+]
+profiling = [
+    "viztracer>=1.1.1",
+]
